# QuiverZLive

./: LICENSE  Qt_custom_boxes.py  Qt_zoomable_view.py  QuiverZLive.py  README.md  app.py  app.pyw  app_legacy.py  calc_HS_C.py  calc_hasse.py  calc_linear3dmirror.py  calculations_window.py  graph_model.py  main_window.py  monopole_formula.py  nx_dynkin.py  nx_layouts.py  pyproject.toml  quiver_scene.py  requirements.txt  run QuiverZLive.bat  static_scene.py  test.ipynb  test_HS_C.ipynb  vercel.json  window_calculations.py  window_hasse.py  window_main.py
QuiverZLive/: calc_linearmirror.py  nx_layouts.py  quiver_scene.py  static_scene.py  window_calculations.py  window_hasse.py
icons/: QuiverZLive.tikzstyles
quiverzlive/: Qt_custom_boxes.py  Qt_zoomable_view.py  app.py  app.pyw  calc_HS_C.py  calc_hasse.py  calc_linearmirror.py  constants.py  graph_model.py  quiver_scene.py  static_scene.py  window_calculations.py  window_hasse.py  window_main.py
quiverzlive/icons/: logo OLD.tikz
