[build-system]
requires = [
    "setuptools>=42",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "QuiverZLive"
version = "0.0.3"
description = "An interactive tool for quiver calculations and manipulations."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Jazz Ooi" },
    { email = "jazzooi21@gmail.com" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PySide6 >= 6.7.2",
    "networkx",
    "numpy",
    "sympy"
]


[project.urls]
Homepage = "https://github.com/jazzooi21/QuiverZLive"
Repository = "https://github.com/jazzooi21/QuiverZLive"
Issue-Tracker = "https://github.com/jazzooi21/QuiverZLive/issues"

[tool.setuptools]
packages = [
    "quiverzlive"
]

[tool.setuptools.package-data]
quiverzlive = ["*.ico", "*.png"]

[project.scripts]
QuiverZLive = "quiverzlive.app:main"
quiverzlive = "quiverzlive.app:main"
qvzl = "quiverzlive.app:main"

[project.gui-scripts]
QuiverZLive = "quiverzlive.app:main"
quiverzlive = "quiverzlive.app:main"
qvzl = "quiverzlive.app:main"